Use relative paths

--- a/basic/createbag/createbag.html
+++ b/basic/createbag/createbag.html
@@ -1,4 +1,4 @@
-<script src="https://zaza.rocks/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
+<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
 
 <div id="logger"></div>
 
