--- a/basic/virtual/virtual.html
+++ b/basic/virtual/virtual.html
@@ -1,5 +1,5 @@
-<script src="https://zaza.rocks/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
-<script src="https://zaza.rocks/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
+<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
+<script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
 
 <label for="name">Name</label><input type="text" id="name">
 <label for="link">Link</label><input type="text" id="link">
