--- a/basic/upload/upload.html
+++ b/basic/upload/upload.html
@@ -1,5 +1,5 @@
-<script src="https://zaza.rocks/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
-<script src="https://zaza.rocks/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
+<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
+<script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
 
 <input type="file" id="input" multiple>
 <button onclick="doUpload()">Click me</button>
