--- a/basic/vuejs/index.html
+++ b/basic/vuejs/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script src="https://zaza.rocks/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
-    <script src="https://zaza.rocks/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
+    <script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
+    <script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
