--- a/basic/projects/project.html
+++ b/basic/projects/project.html
@@ -1,5 +1,5 @@
-<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
-<script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
+<script src="https://sharehost.local.host/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
+<script src="https://sharehost.local.host/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
 
 <div id="logger"></div>
 
@@ -18,30 +18,76 @@
   // Example of getting and setting bag metadata with project object
   const exampleProject = async () => {
     //Create project object with prohect API key
-    let project = new Zaza.Project('<Project API key>')
+    Zaza.setHost("http://sharehost.local.host/")
+    Zaza.setAdminHost("http://admin.local.host/")
+
+    let project = new Zaza.Project('eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJWaWV3SWQiOiIiLCJSaWdodHMiOjAsIkJsZXNzZWQiOmZhbHNlLCJCYWdTdG9yYWdlUWlkIjoiIiwiUHJvamVjdElkIjoiNDdkZjg0ZmFiNTJmYTZiMjNlZjE2NWE5ZTYxYWVmMDciLCJTY29wZSI6InByb2plY3QgdmlldyIsImlhdCI6MTU5ODI1MTk3NH0.HMh8dluZExTFp-BAOxlz-DEWGW3PHeq1mAbUYVOTk1I')
     
     //Create bag in project 
-    let owner = await project.createBag()
-    console.log(`Created bag owner id : ${owner.qid}`)
+    // let owner = await project.createBag()
+    // console.log(`Created bag owner id : ${owner.qid}`)
 
-    //Get metadata of all bags in project 
-    console.log('Metadata for project')
-    var data = await project.getMetadata()
-    data.forEach(element => {
-        console.log(`Bag storage id : ${element.$dataScope} Name : ${element.name}`)
-    });
+    // //Get metadata of all bags in project 
+    // console.log('Metadata for project')
+    // var data = await project.getMetadata()
+    // data.forEach(element => {
+    //     console.log(`Bag storage id : ${element.$dataScope} Name : ${element.name}`)
+    // });
 
-    //Set metadata for bag in project
-    let nr = Math.round(Math.random() * 10)
-    console.log(`Updating metadata for bag storage id : ${data[0].$dataScope}`)
-    data[0].name = "Name_"+nr
-    var res = await project.setMetadata(data[0])
+    // //Set metadata for bag in project
+    // let nr = Math.round(Math.random() * 10)
+    // console.log(`Updating metadata for bag storage id : ${data[0].$dataScope}`)
+    // data[0].name = "Name_"+nr
+    // var res = await project.setMetadata(data[0])
 
-    console.log('Updated metadata for project')
-    var data = await project.getMetadata()
-    data.forEach(element => {
-        console.log(`Bag storage id : ${element.$dataScope} Name : ${element.name}`)
-    });
+    // console.log('Updated metadata for project')
+    // var data = await project.getMetadata()
+    // data.forEach(element => {
+    //     console.log(`Bag storage id : ${element.$dataScope} Name : ${element.name}`)
+    // });
+
+    console.log("Project ",project)
+
+    //Create object for project
+    console.log(`Creating object for project`)
+    await project.newObject("test",false,false).catch(err => console.log("Error ",err))
+
+    // Get object for project
+    console.log(`Getting object for project`)
+    let obj = await project.getObject("test")
+    console.log(`Object name : ${obj.name} Object qid: ${obj.$qid}`)
+
+    //Get attributes of object
+    console.log("Getting attributes for project")
+    let properties = await obj.getAttributes()
+    console.log(`Properties : ${JSON.stringify(properties)}`)
+
+    //Get specific attribute of object
+    console.log("Getting specific attribute for project")
+    let property = await obj.getAttribute("id")
+    console.log(`Property : ${JSON.stringify(property)}`)
+
+
+    //Create attribute for project
+    console.log("Creatng attribute for project")
+    property = await obj.newAttribute("Prop 1")
+    console.log(`Property : ${JSON.stringify(property)}`)
+
+    //Get specific attribute of object
+    console.log("Getting specific attribute for project")
+    property = await obj.getAttribute("Prop 1")
+    console.log(`Property : ${JSON.stringify(property)}`)
+
+
+    // Delete object for project
+    console.log(`Deleting object for project`)
+    await project.deleteObject("test")
+
+     // Get object for project
+     console.log(`Getting object for project`)
+    obj = await project.getObject("test").catch(err => console.log("Failed to get object:",err))
+    console.log(`Object name : ${obj}`)
+
   }
 
   exampleProject()
