--- a/basic/oauth/oauth.html
+++ b/basic/oauth/oauth.html
@@ -35,10 +35,10 @@
 
     // Example of authenticating user with oauth
     exampleAuthenticate = async () => {
-        var isAuthenticated = await Bridge.Auth.isAuthenticated()
-        console.log("Is Authenticated : " + isAuthenticated)
+        var isLoggedIn = await Bridge.Auth.isLoggedIn()
+        console.log("Is LoggedIn : " + isLoggedIn)
 
-        if (isAuthenticated) {
+        if (isLoggedIn) {
             document.getElementById("logout").style.display = "block"
             document.getElementById("login").style.display = "none"
 
