--- a/basic/oauth/oauth.html
+++ b/basic/oauth/oauth.html
@@ -19,7 +19,7 @@
     //Login method using Bridge
     login = async () => {
         console.log("Login")
-        await Bridge.Auth.Authenticate({
+        await Bridge.Auth.authenticate({
             template: Bridge.AuthConfigTemplate.Okta,
             issuer: "<Issuer URL>",
             clientId: "<Client Id>",
@@ -29,7 +29,7 @@
     //Logout method using Bridge
     logout = async () => {
         console.log("Logging out")
-        await Bridge.Auth.Logout()
+        await Bridge.Auth.logout()
         await exampleAuthenticate()
     }
 
