--- a/basic/notify/notify.html
+++ b/basic/notify/notify.html
@@ -28,7 +28,9 @@
         let owner = await project.createBag()
         console.log(`Created bag owner id : ${owner.qid}`)
 
-        // Save the bag for the owner view.
+        //Save the bag
+        const isBagSaved = await Bridge.View.saveBag('Bag Name')
+        console.log(`bag saved: ${isBagSaved}`)
 
         // Get the current view ID
         let qid = await Bridge.View.getId()
