--- a/basic/StructuredData/language/Twintagmetadata.html
+++ b/basic/StructuredData/language/Twintagmetadata.html
@@ -1,4 +1,4 @@
-<script src="zaza.js" charset="utf-8"></script>
+<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
 <script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
 
 <div id="logger"></div>
