--- a/basic/StructuredData/language/twintagDataWithFilter.html
+++ b/basic/StructuredData/language/twintagDataWithFilter.html
@@ -1,4 +1,4 @@
-<script src="zaza.js" charset="utf-8"></script>
+<script src="/sdk/v1/zaza-sdk/zaza.js" charset="utf-8"></script>
 <script src="/sdk/v1/bridge/bridge.js" charset="utf-8"></script>
 
 <div id="logger"></div>
@@ -18,10 +18,7 @@
     // Example of getting and setting twintag data with project object
     const exampleProject = async () => {
         //Create project object with prohect API key
-        Zaza.setHost("https://sharehost.local.host")
-        Zaza.setAdminHost("https://admin.local.host")
-        let project = new Zaza.Project('eyJhbGciOiJIUzI1NiIsImtpZCI6IjZiYTNlMmFhMTM0MWY3OTkwOTM5N2ExODY1MWRiMTM1IiwidHlwIjoiSldUIn0.eyJWaWV3SWQiOiIiLCJSaWdodHMiOjAsIkJsZXNzZWQiOmZhbHNlLCJCYWdTdG9yYWdlUWlkIjoiIiwiUHJvamVjdElkIjoiZjZlMDQwMmU3MGMwNTlmOTVkYzU3NWExY2I3OGJiYjQiLCJTY29wZSI6InByb2plY3QgdmlldyIsImlhdCI6MTYyMjgwODQ1M30.MnPrbr6jSNVNrDXbDTImJJ86MhSAB4F_sWbYt-ChU3k')
-        debugger;
+        let project = new Zaza.Project('<api key>')
         const langs = ['en', 'nl', 'fr']
         let res = await project.setAllLanguages(langs, 'en').catch(err => {
             console.log("error setting project languages")
